User-Vendor protocol  v1.1